tests/ui/consts/const-eval/ub-enum-overwrite.stderr
error[E0080]: using uninitialized data, but this operation requires initialized memory
  --> $DIR/ub-enum-overwrite.rs:11:14
   |
LL |     unsafe { *p }
   |              ^^ evaluation of `_` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
